--- a/sitio/index.html
+++ b/sitio/index.html
@@ -2,15 +2,14 @@
 
 <html>
 	<head>
-	<tittle> Tumarido WEB </tittle>
+		<meta charset="utf-8">
+	<tittle> Mi primera pagina </tittle>
 	</head>
 
 	<body>
-
 	<h1> Que onda perri titulo principal</h1>
 	<h2> Y este es el subprincipal paa </h2>
 	<p> aver que onda el parrado d texto pa </p>
-
 	<button>Clikeame putoooo</button> 
 
 	</body>
